# lyra_android

./: .gitignore  BuildCmd.txt  CMakeLists.txt  local.properties  settings.gradle
app/: AndroidManifest.xml  build.gradle
app/cpp/: CMakeLists.txt  LibraryManifest.xml  benchmark_decode_run.cc  jni_benchmark_decode_lib.cc
app/java/com/example/android/lyra/: MainActivity.java
app/res/layout/: activity_main.xml
bazel_out/: stable-status.txt  volatile-status.txt
external_libs/abseil-cpp-20220623.0/: CMakeLists.txt
external_libs/filesystem-1.5.12/: CMakeLists.txt
external_libs/filesystem-1.5.12/test/: CMakeLists.txt
liblyra/: AndroidManifest.xml  CMakeLists.txt  build.gradle
liblyra/src/: CMakeLists.txt  architecture_utils.h  benchmark_decode_lib.cc  causal_convolutional_conditioning_test.cc  conv1d_layer_wrapper_test.cc  decoder_main.cc  decoder_main_lib.cc  decoder_main_lib.h  decoder_main_lib_test.cc  dilated_convolutional_layer_wrapper_test.cc  encoder_main.cc  encoder_main_lib.cc  encoder_main_lib.h  encoder_main_lib_test.cc  exported_layers_test.h  lyra_components.h  lyra_config.h  lyra_decoder.cc  lyra_decoder.h  lyra_decoder_test.cc  lyra_encoder.cc  lyra_encoder.h  lyra_encoder_test.cc  lyra_integration_test.cc  lyra_wavegru.h  lyra_wavegru_test.cc  project_and_sample_test.cc  transpose_convolutional_layer_wrapper_test.cc  vector_quantizer_impl.cc  vector_quantizer_impl.h  vector_quantizer_impl_test.cc  wav_util_test.cc  wavegru_model_impl.cc  wavegru_model_impl.h  wavegru_model_impl_test.cc
liblyra/src/proto/: CMakeLists.txt  lyra_config.pb.cc  lyra_config.pb.h  readme.md
libs/: CMakeLists.txt
libs/abseil-cpp/: abseil.cmake  abslConfig.cmake
libs/abseil-cpp/cmake/: abslConfig.cmake  abslTargets-noconfig.cmake  abslTargets.cmake
libs/abseil-cpp/cmake/absl/: abslConfig.cmake  abslTargets-noconfig.cmake  abslTargets.cmake
libs/abseil-cpp/pkgconfig/: absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_debugging.pc  absl_debugging_internal.pc  absl_demangle_internal.pc  absl_dynamic_annotations.pc  absl_endian.pc  absl_errno_saver.pc  (+97 more)
libs/com_google_audio_dsp/: CMakeLists.txt
libs/eigen-3.4.0/share/pkgconfig/: eigen3.pc
libs/eigen/share/pkgconfig/: eigen3.pc
libs/eigen_archive/: .hg_archival.txt  CMakeLists.txt  WORKSPACE
libs/fft2d/: CMakeLists.txt  WORKSPACE
libs/filesystem-1.5.12/cmake/: ghc_filesystem-config.cmake  ghc_filesystem-targets.cmake
libs/glog-0.6.0/: glogConfig.cmake  libglog.pc
libs/glog-0.6.0/glog/: logging.h
libs/gulrak_filesystem/: BUILD.bazel  WORKSPACE
libs/hello_world/: CMakeLists.txt  nativelib.cpp
libs/multichannel-audio-tools/: CMakeLists.txt
libs/protobuf-3.21.4/arm64-v8a/: protobuf-lite.pc  protobuf.pc
libs/protobuf-3.21.4/cmake/protobuf/: protobuf-config.cmake  protobuf-options.cmake  protobuf-targets.cmake
sparse_matmul/: CMakeLists.txt
sparse_matmul/compute/: CMakeLists.txt
sparse_matmul/layers/: csrblocksparse_test.cc  read_array_ifstream.h  utils.h  utils_test.cc
